adjust layer z-index for stain transition. fix bio

--- a/src/components/modal.scss
+++ b/src/components/modal.scss
@@ -2,7 +2,7 @@
   background: #1e3352;
   border-radius: 10px;
   position: fixed;
-  width: 83%;
+  width: 88%;
   max-width: 850px;
   height: 75%;
   top: 50%;
@@ -82,7 +82,7 @@
   border-radius: 10px;
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: fit-content;
   top: -15px;
   left: -15px;
   display: flex;
@@ -92,7 +92,7 @@
   -ms-user-select: none;
 
   button {
-    color: #f4e5e0b0;
+    color: #f4e5e094;
     background: rgba(78, 80, 84, 0.142);
     background: linear-gradient(90deg, rgba(78, 80, 84, 1) 0%, rgba(27, 38, 52, 1) 3%, rgba(18, 29, 47, 1) 11%, rgba(6, 12, 22, 0.144) 80%);
     border-top-left-radius: 9px;
@@ -130,7 +130,7 @@
   .tab-icon {
     transition: opacity 200ms ease;
     height: 24px;
-    opacity: 0.7;
+    opacity: 0.6;
 
   }
 }
@@ -220,13 +220,16 @@
 ////////////////////////////////////////////////////
 
 @media only screen and (max-width: 600px) {
-  .modal-main {
-    width: 86%
-  }
-
   .inner-window {
     width: 88%;
   }
+}
+
+@media only screen and (max-width: 400px) {
+  .modal-nav {
+    left: -10px;
+  }
+
 }
 
 
