--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -55,7 +55,7 @@
 ////
 .modal-stain {
   position: fixed;
-  width: 83%;
+  width: 88%;
   max-width: 850px;
   // width: 75%;
   height: 75%;
@@ -64,23 +64,28 @@
   transform: translate(-50%, -50%);
   
   &.heavy-border {
-    z-index: -90;
+    pointer-events: none;
+    z-index: 0;
     background: #421e0067;
     border-radius: 10px;
     border: 6px solid #0042a5;
     transition: opacity 1.9s ease-out;
   }
-
+  
   &.light-border {
-    z-index: -110;
+    pointer-events: none;
+    z-index: 0;
     background: #141b34;
     border: 10px solid #15233970;
+    border-radius: 10px;
     transition: opacity 850ms ease-out;
   }
-
+  
   &.flash {
-    z-index: -100;
+    pointer-events: none;
+    z-index: 0;
     background: #c9dfff;
+    border-radius: 10px;
     transition: opacity 125ms ease-out;
   }
 }
